--- a/TREC/src/main/resources/templates/pagar.html
+++ b/TREC/src/main/resources/templates/pagar.html
@@ -1,72 +1,4 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <title>Tu Restaurante en Casa</title>
-    <link rel="icon" type="image/png" sizes="256x256" href="images/logo.png">
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> <!--Este-->
-	
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-	<link rel="stylesheet" href="css/animate.css">
-	
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
-
-	<link rel="stylesheet" href="css/bootstrap-datepicker.css">
-	<link rel="stylesheet" href="css/jquery.timepicker.css">
-	
-	<link rel="stylesheet" href="css/flaticon.css">
-	<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
-	<div class="wrap">
-        <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-12 col-md d-flex align-items-center">
-                </div>
-                <div class="col-12 col-md-4 d-flex justify-content-md-end btn-group">
-                    <a href="registro.html" class="btn btn-primary btn-lg">RegÃ­strate o inicia sesiÃ³n</a>
-                </div>
-                <div class="col-12 col-md-1 d-flex justify-content-md-end btn-group">
-                    <a href="carro.html" class="btn btn-primary btn-sm"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
-						<path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
-					  </svg></a>
-                </div>
-            </div>
-        </div>
-    </div>
-	
-	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-		<div class="container">
-			<a href="index.html"><img src="images/logo.png" style="border: 1px solid rgba(0, 0, 0, 0);background-color: rgba(255, 0, 0, 0)"; height="64" width="64" class="logo img-circle img-thumbnail" alt="logo"></a>
-			<a class="navbar-brand" href="index.html">Tu Restaurante<span> en Casa</span></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="oi oi-menu"></span> MenÃº
-			</button>
-
-			<div class="collapse navbar-collapse" id="ftco-nav">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a href="index.html" class="nav-link">Principal</a></li>
-					<li class="nav-item"><a href="equipo.html" class="nav-link">Equipo</a></li>
-					<li class="nav-item"><a href="carta.html" class="nav-link">Carta</a></li>
-					<li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
-                    <li class="nav-item"><a href="perfil.html" class="nav-link" content="text-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-						<path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-						<path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-					  </svg></a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+{{>header}}
 	<!-- END nav -->
 
 	<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_5.jpg');" data-stellar-background-ratio="0.5">
@@ -75,7 +7,7 @@
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
 				<div class="col-md-9 ftco-animate text-center mb-5">
 					<h1 class="mb-2 bread">Paga tu Pedido</h1>
-					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Principal<span class="mr-2"><i class="fa fa-chevron-right"></i><a href="carro.html">Carro <i class="fa fa-chevron-right"></i></a></span> <span>Pagar <i class="fa fa-chevron-right"></i></span></p>
+					<p class="breadcrumbs"><span class="mr-2"><a href="index">Principal<span class="mr-2"><i class="fa fa-chevron-right"></i><a href="carro">Carro <i class="fa fa-chevron-right"></i></a></span> <span>Pagar <i class="fa fa-chevron-right"></i></span></p>
 				</div>
 			</div>
 		</div>
@@ -101,19 +33,19 @@
 					</div>
 				</div>
 				<br>
-				<h2 style="color: aliceblue;"><b>Datos de direcciÃ³n de envÃ­o:</b></h2>
+				<h2 style="color: aliceblue;"><b>Datos de dirección de envío:</b></h2>
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="form-group">
-							<label for="email">DirecciÃ³n:</label>
-							<input class="form-control" id="direction" placeholder="Introduce tu direcciÃ³n">
+							<label for="email">Dirección:</label>
+							<input class="form-control" id="direction" placeholder="Introduce tu dirección">
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-lg-2">
 						<div class="form-group">
-							<label for="email">CÃ³digo Postal:</label>
+							<label for="email">Código Postal:</label>
 							<input class="form-control" id="cp" placeholder="CP">
 						</div>
 					</div>
@@ -125,8 +57,8 @@
 					</div>
 					<div class="col-lg-5">
 						<div class="form-group">
-							<label for="email">PaÃ­s:</label>
-							<input class="form-control" id="country" placeholder="PaÃ­s">
+							<label for="email">País:</label>
+							<input class="form-control" id="country" placeholder="País">
 						</div>
 					</div>
 				</div>
@@ -134,8 +66,8 @@
 				<div class="row">
 					<div class="col-lg-4">
 						<div class="form-group">
-							<label for="pwd">NÃºmero de telÃ©fono:</label>
-							<input type="tel" class="form-control" id="tel" placeholder="Introduce tu nÃºmero de telÃ©fono">
+							<label for="pwd">Número de teléfono:</label>
+							<input type="tel" class="form-control" id="tel" placeholder="Introduce tu número de teléfono">
 						</div>
 					</div>
 				</div>
@@ -158,9 +90,9 @@
                             <form role="form">
                             <div class="form-group">
                                 <label for="cardNumber">
-                                    NÃšMERO DE TARJETA</label>
+                                    NÚMERO DE TARJETA</label>
                                 <div class="input-group">
-                                    <input type="text" class="form-control" id="cardNumber" placeholder="NÂº de Tarjeta VÃ¡lido"
+                                    <input type="text" class="form-control" id="cardNumber" placeholder="Nº de Tarjeta Válido"
                                         required autofocus />
                                     <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
                                 </div>
@@ -180,7 +112,7 @@
                                 <div class="col-xs-5 col-md-5 pull-right">
                                     <div class="form-group">
                                         <label for="cvCode">
-                                            CÃ“DIGO</label>
+                                            CÓDIGO</label>
                                         <input type="password" class="form-control" id="cvCode" placeholder="CV" required />
                                     </div>
                                 </div>
@@ -193,10 +125,10 @@
                         </li>
                     </ul>-->
                     <div class="col-xs-9 col-md-8">
-                        <h4 class="text-right">Total a pagar: <strong>50.00â‚¬</strong></h4>
+                        <h4 class="text-right">Total a pagar: <strong>50.00€</strong></h4>
                     </div>
                     <br>
-                    <a href="pagar.html" class="btn btn-primary btn-lg btn-block" role="button">Pagar</a>
+                    <a href="pagar" class="btn btn-primary btn-lg btn-block" role="button">Pagar</a>
                 </div>
             </div>
         </div>
@@ -204,66 +136,4 @@
     
 	<br>
 
-	<footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8.jpg');">
-		<div class="container">
-			<div class="row mb-5">
-				<div class="col-md-6 col-lg-6">
-					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Tu Restaurante en casa</h2>
-						<p>Si no puedes llegar al restaurante... Â¡Haz que el restaurante llegue a ti!</p>
-						<p>Gracias a Tu Restaurante en Casa podrÃ¡s acceder a la mejor variedad de comida sin tener que salir de casa.</p>
-						<p>Â¿Te animas?</p>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-6">
-					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Horario</h2>
-                        <ul class="list-unstyled open-hours">
-                            <li class="d-flex"><span>Lunes</span><span>10:00 - 22:00</span></li>
-                            <li class="d-flex"><span>Martes</span><span>Cerrado</span></li>
-                            <li class="d-flex"><span>MiÃ©rcoles</span><span>10:00 - 22:00</span></li>
-                            <li class="d-flex"><span>Jueves</span><span>10:00 - 22:00</span></li>
-                            <li class="d-flex"><span>Viernes</span><span>10:00 - 22:00</span></li>
-                            <li class="d-flex"><span>SÃ¡bado</span><span>10:00 - 22:00</span></li>
-                            <li class="d-flex"><span>Domingo</span><span>10:00 - 22:00</span></li>
-                        </ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="container-fluid px-0 bg-primary py-3">
-			<div class="row no-gutters">
-				<div class="col-md-12 text-center">
-
-					<p class="mb-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-					</div>
-				</div>
-			</div>
-	</footer>
-		
-
-		<!-- loader -->
-		<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
-
-
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery-migrate-3.0.1.min.js"></script>
-		<script src="js/popper.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/jquery.easing.1.3.js"></script>
-		<script src="js/jquery.waypoints.min.js"></script>
-		<script src="js/jquery.stellar.min.js"></script>
-		<script src="js/owl.carousel.min.js"></script>
-		<script src="js/jquery.magnific-popup.min.js"></script>
-		<script src="js/jquery.animateNumber.min.js"></script>
-		<script src="js/bootstrap-datepicker.js"></script>
-		<script src="js/jquery.timepicker.min.js"></script>
-		<script src="js/scrollax.min.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-		<script src="js/google-map.js"></script>
-		<script src="js/main.js"></script>
-		
-	</body>
-	</html>
+{{>footer}}
