Many changes in Maven server and bugs fixed.
- Reestructured packages.
- First controllers, services and repositories added.
- Models added.
- Accent mark bug and other bugs fixed.

--- a/TREC/src/main/resources/templates/carro.html
+++ b/TREC/src/main/resources/templates/carro.html
@@ -9,7 +9,7 @@
 					<h1 class="mb-2 bread">Registro de pedidos</h1>
 					<p class="breadcrumbs"><span class="mr-2"><a href="index">Principal <i class="fa fa-chevron-right"></i></a></span> <span>Carro <i class="fa fa-chevron-right"></i></span></p>
                     <p>Hey! Echa un vistazo a los pedidos que has realizado hasta el momento.</p>
-					<p>Si tu pedido ya está listo, ¡finaliza aquí tu compra!</p>
+					<p>Si tu pedido ya estÃ¡ listo, Â¡finaliza aquÃ­ tu compra!</p>
 				</div>
 			</div>
 		</div>
@@ -82,7 +82,7 @@
                         <div class="panel-footer">
                             <div class="row text-center">
                                 <div class="col-xs-9 col-md-8">
-                                    <h4 class="text-right">Total <strong>50.00€</strong></h4>
+                                    <h4 class="text-right">Total <strong>50.00â‚¬</strong></h4>
                                 </div>
                                 <div class="col-xs-3 col-md-4">
                                     <a href="pagar">
