--- a/TREC/src/main/resources/templates/contacto.html
+++ b/TREC/src/main/resources/templates/contacto.html
@@ -18,17 +18,17 @@
   <div class="container">
     <div class="row d-flex contact-info">
       <div class="col-md-12">
-        <h2 class="h4 font-weight-bold">Información de contacto</h2><br>
+        <h2 class="h4 font-weight-bold">InformaciÃ³n de contacto</h2><br>
       </div>
       <div class="w-100"></div>
       <div class="col-md-4 d-flex">
        <div class="dbox">
-         <p><span>Dirección:</span> <br>Calle Tulipán, s/n, 28933 Móstoles, Madrid</p>
+         <p><span>DirecciÃ³n:</span> <br>Calle TulipÃ¡n, s/n, 28933 MÃ³stoles, Madrid</p>
        </div>
      </div>
      <div class="col-md-4 d-flex">
        <div class="dbox">
-         <p><span>Teléfono:</span> <br><a href="tel://914889393">+34 914 88 93 93</a></p>
+         <p><span>TelÃ©fono:</span> <br><a href="tel://914889393">+34 914 88 93 93</a></p>
        </div>
      </div>
      <div class="col-md-4 d-flex">
