--- a/TREC/src/main/resources/templates/equipo.html
+++ b/TREC/src/main/resources/templates/equipo.html
@@ -27,7 +27,7 @@
 					<div class="staff">
 						<div class="img" style="background-image: url(images/chef-4.jpg);"></div>
 						<div class="text px-4 pt-2">
-							<h3>Javier Méndez</h3>
+							<h3>Javier MÃ©ndez</h3>
 							<span class="position mb-2">Fundador</span>
 							<div class="faded">
 								<p>Solo tengo un objetivo, llevar comida desde mi cocina hasta tu puerta.</p>
@@ -45,10 +45,10 @@
 					<div class="staff">
 						<div class="img" style="background-image: url(images/chef-2.jpg);"></div>
 						<div class="text px-4 pt-2">
-							<h3>Azahara Andújar</h3>
+							<h3>Azahara AndÃºjar</h3>
 							<span class="position mb-2">Fundador</span>
 							<div class="faded">
-								<p>La comida para mí es un estilo de vida: estoy todo el dia comiendo. Eso,sí que sea sin gluten.</p>
+								<p>La comida para mÃ­ es un estilo de vida: estoy todo el dia comiendo. Eso sÃ­, que sea sin gluten.</p>
 								<ul class="ftco-social d-flex">
 									<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 									<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -84,7 +84,7 @@
 							<h3>David Mestanza</h3>
 							<span class="position mb-2">Fundador</span>
 							<div class="faded">
-								<p>Mi madre me decia de pequeño que comiera mucha verdura y así he salido: vegano.</p>
+								<p>Mi madre me decia de pequeÃ±o que comiera mucha verdura y asÃ­ he salido: vegano.</p>
 								<ul class="ftco-social d-flex">
 									<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 									<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
