--- a/TREC/src/main/resources/templates/header.html
+++ b/TREC/src/main/resources/templates/header.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Tu Restaurante en Casa</title>
     <link rel="icon" type="image/png" sizes="256x256" href="images/logo.png">
-	<meta charset="utf-8">
+    <meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
@@ -23,6 +23,7 @@
 	
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 	<div class="wrap">
@@ -32,7 +33,6 @@
 				</div>
 				<div class="col-12 col-md-4 d-flex justify-content-md-end btn-group">
 					<a href="registro" class="btn btn-primary btn-sm">Regístrate o inicia sesión</a>
-					<p>Bienvenido, {{name}}</p>
 				</div>
 				<div class="col-12 col-md-1 d-flex justify-content-md-end btn-group">
 					<a href="carro" class="btn btn-primary btn-sm"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
@@ -53,7 +53,7 @@
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active"><a href="index" class="nav-link">Principal</a></li>
+					<li class="nav-item"><a href="index" class="nav-link">Principal</a></li>
 					<li class="nav-item"><a href="equipo" class="nav-link">Equipo</a></li>
 					<li class="nav-item"><a href="carta" class="nav-link">Carta</a></li>
 					<li class="nav-item"><a href="contacto" class="nav-link">Contacto</a></li>
