--- a/TREC/src/main/resources/templates/index.html
+++ b/TREC/src/main/resources/templates/index.html
@@ -60,10 +60,10 @@
 					<div class="heading-section ftco-animate mb-5">
 						<span class="subheading">Este Es Nuestro Secreto</span>
 						<h2 class="mb-4">Productos Frescos</h2>
-						<p>Tenemos un equipo de chefs con las m·s altas cualificaciones, los cuales est·n dispuestos a todo para servirte
+						<p>Tenemos un equipo de chefs con las m√°s altas cualificaciones, los cuales est√°n dispuestos a todo para servirte
 						la mejor comida disponible.
 						</p>
-						<p>No se detendran ante nada.
+						<p>No se detendr√°n ante nada.
 						</p>
 						<p><a href="equipo" class="btn btn-primary">Conocenos</a></p>
 					</div>
