--- a/TREC/src/main/resources/templates/perfil.html
+++ b/TREC/src/main/resources/templates/perfil.html
@@ -14,7 +14,7 @@
 
     <section class="ftco-section ftco-no-pt ftco-no-pb" style="background-image: url('https://cdn.hipwallpaper.com/i/54/42/AL9wmh.jpg');">
 
-		<div class="navbar-default" id="ftco-nav">
+	</br><div class="navbar-default" id="ftco-nav">
 			<ul id="infoPerfil" class="nav ml-auto nav-pills nav-fill">
 				<li role="presentation" class="nav-item"><a class="nav-link active" href="#editar">Editar datos</a></li>
 				<li role="presentation" class="nav-item"><a class="nav-link" href="#platos">Platos recomendados</a></li>
@@ -31,7 +31,7 @@
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<div class="text-center">
 								<img src="https://www.optimaley.com/wp-content/uploads/2014/09/foto-perfil-generica.jpg" class="avatar img-circle img-thumbnail" alt="avatar">
-								<h6>Upload a different photo...</h6>
+								<h6>Sube una foto...</h6>
 								<input type="file" class="text-center center-block well well-sm">
 							</div>
 						</div>
@@ -51,25 +51,31 @@
 									</div>
 								</div>
 								<div class="form-group">
-									<label class="col-md control-label">Correo electrónico:</label>
+									<label class="col-md control-label">Alias:</label>
+									<div class="col-md-8">
+										<input class="form-control" value="johndoe" type="text">
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="col-md control-label">Correo electrÃ³nico:</label>
 									<div class="col-md-8">
 										<input class="form-control" value="trec@turestauranteencasa.es" type="text">
 									</div>
 								</div>
 								<div class="form-group">
-									<label class="col-md control-label">Teléfono</label>
+									<label class="col-md control-label">TelÃ©fono</label>
 									<div class="col-md-8">
 										<input class="form-control" value="612 17 18 72" type="text">
 									</div>
 								</div>
 								<div class="form-group">
-									<label class="col-md control-label">Contraseña:</label>
+									<label class="col-md control-label">ContraseÃ±a:</label>
 									<div class="col-md-8">
 										<input class="form-control" value="11111122333" type="password">
 									</div>
 								</div>
 								<div class="form-group">
-									<label class="col-md control-label">Confirmar contraseña:</label>
+									<label class="col-md control-label">Confirmar contraseÃ±a:</label>
 									<div class="col-md-8">
 										<input class="form-control" value="11111122333" type="password">
 									</div>
@@ -77,8 +83,8 @@
 								<div class="form-group">
 									<label class="col-md-3 control-label"></label>
 									<div class="col-md-8">
-										<input class="btn btn-primary" value="Save Changes" type="button">
-										<input class="btn btn-secondary" value="Cancel" type="reset">
+										<input class="btn btn-primary" value="Guardar cambios" type="button">
+										<input class="btn btn-secondary" value="Cancelar" type="reset">
 									</div>
 								</div>
 							</form>
@@ -105,7 +111,7 @@
 												</div>
 												<div class="one-forth">
 													<div><a href="carro.html" class="btn btn-primary btn-sm">PEDIR</a></div>
-													<span class="price">25€</span>
+													<span class="price">25â‚¬</span>
 												</div>
 											</div>
 										</div>
@@ -119,7 +125,7 @@
 												</div>
 												<div class="one-forth">
 													<div><a href="carro.html" class="btn btn-primary btn-sm">PEDIR</a></div>
-													<span class="price">25€</span>
+													<span class="price">25â‚¬</span>
 												</div>
 											</div>
 										</div>
@@ -137,12 +143,11 @@
 				<div class="container" style="padding-top: 60px;">
 					<h1 class="page-header">Facturas</h1>
 					<br>
-					<b>No ha realizado ningún pedido.</b>
+					<b>No ha realizado ningÃºn pedido.</b>
 				</div>
 				<br>
 			</div>
 		</div>
     </section>
-
-
- {{>footer}}
+		
+{{>footer}}
