--- a/TREC/src/main/resources/templates/registro.html
+++ b/TREC/src/main/resources/templates/registro.html
@@ -6,7 +6,7 @@
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
 				<div class="col-md-9 ftco-animate text-center mb-5">
-					<h1 class="mb-2 bread">¡Regístrate ya!</h1>
+					<h1 class="mb-2 bread">Â¡RegÃ­strate ya!</h1>
 				</div>
 			</div>
 		</div>
@@ -18,7 +18,7 @@
 				<div class="row">
 					<div class="col-sm-4 p-4 p-md-5 d-flex align-items-center justify-content-md-end bg-primary">
 						<form action="#" class="appointment-form">
-							<h3 class="mb-3">Regístrate</h3>
+							<h3 class="mb-3">RegÃ­strate</h3>
 							<div class="row">
 								<div class="col-md-12">
 									<div class="form-group">
@@ -32,27 +32,27 @@
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="email" class="form-control" placeholder="Correo electrónico">
+										<input type="email" class="form-control" placeholder="Correo electrï¿½nico">
 									</div>
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="text" class="form-control" placeholder="Teléfono">
+										<input type="text" class="form-control" placeholder="Telï¿½fono">
 									</div>
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="password" class="form-control" placeholder="Contraseña">
+										<input type="password" class="form-control" placeholder="Contraseï¿½a">
 									</div>
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="password" class="form-control" placeholder="Confirmar contraseña">
+										<input type="password" class="form-control" placeholder="Confirmar contraseï¿½a">
 									</div>
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="submit" value="Regístrate" class="btn btn-white py-3 px-4">
+										<input type="submit" value="Regï¿½strate" class="btn btn-white py-3 px-4">
 									</div>
 								</div>
 							</div>
@@ -62,21 +62,21 @@
 					</div>
 					<div class="col-sm-4 p-4 p-md-5 d-flex align-items-center justify-content-center bg-primary">
 						<form action="#" class="appointment-form">
-							<h3 class="mb-3">Iniciar sesión</h3>
+							<h3 class="mb-3">Iniciar sesiÃ³n</h3>
 							<div class="row">
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="email" class="form-control" placeholder="Correo electrónico">
+										<input type="email" class="form-control" placeholder="Correo electrï¿½nico">
 									</div>
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="password" class="form-control" placeholder="Contraseña">
+										<input type="password" class="form-control" placeholder="Contraseï¿½a">
 									</div>
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="submit" value="Iniciar sesión" class="btn btn-white py-3 px-4">
+										<input type="submit" value="Iniciar sesiï¿½n" class="btn btn-white py-3 px-4">
 									</div>
 								</div>
 							</div>
