--- a/TREC/src/main/resources/templates/pagar.html
+++ b/TREC/src/main/resources/templates/pagar.html
@@ -33,19 +33,19 @@
 					</div>
 				</div>
 				<br>
-				<h2 style="color: aliceblue;"><b>Datos de dirección de envío:</b></h2>
+				<h2 style="color: aliceblue;"><b>Datos de direcciÃ³n de envÃ­o:</b></h2>
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="form-group">
-							<label for="email">Dirección:</label>
-							<input class="form-control" id="direction" placeholder="Introduce tu dirección">
+							<label for="email">DirecciÃ³n:</label>
+							<input class="form-control" id="direction" placeholder="Introduce tu direcciï¿½n">
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-lg-2">
 						<div class="form-group">
-							<label for="email">Código Postal:</label>
+							<label for="email">CÃ³digo Postal:</label>
 							<input class="form-control" id="cp" placeholder="CP">
 						</div>
 					</div>
@@ -57,8 +57,8 @@
 					</div>
 					<div class="col-lg-5">
 						<div class="form-group">
-							<label for="email">País:</label>
-							<input class="form-control" id="country" placeholder="País">
+							<label for="email">PaÃ­s:</label>
+							<input class="form-control" id="country" placeholder="Paï¿½s">
 						</div>
 					</div>
 				</div>
@@ -66,8 +66,8 @@
 				<div class="row">
 					<div class="col-lg-4">
 						<div class="form-group">
-							<label for="pwd">Número de teléfono:</label>
-							<input type="tel" class="form-control" id="tel" placeholder="Introduce tu número de teléfono">
+							<label for="pwd">NÃºmero de telÃ©fono:</label>
+							<input type="tel" class="form-control" id="tel" placeholder="Introduce tu nï¿½mero de telï¿½fono">
 						</div>
 					</div>
 				</div>
@@ -90,9 +90,9 @@
                             <form role="form">
                             <div class="form-group">
                                 <label for="cardNumber">
-                                    NÚMERO DE TARJETA</label>
+                                    Nï¿½MERO DE TARJETA</label>
                                 <div class="input-group">
-                                    <input type="text" class="form-control" id="cardNumber" placeholder="Nº de Tarjeta Válido"
+                                    <input type="text" class="form-control" id="cardNumber" placeholder="Nï¿½ de Tarjeta Vï¿½lido"
                                         required autofocus />
                                     <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
                                 </div>
@@ -112,7 +112,7 @@
                                 <div class="col-xs-5 col-md-5 pull-right">
                                     <div class="form-group">
                                         <label for="cvCode">
-                                            CÓDIGO</label>
+                                            Cï¿½DIGO</label>
                                         <input type="password" class="form-control" id="cvCode" placeholder="CV" required />
                                     </div>
                                 </div>
@@ -125,7 +125,7 @@
                         </li>
                     </ul>-->
                     <div class="col-xs-9 col-md-8">
-                        <h4 class="text-right">Total a pagar: <strong>50.00€</strong></h4>
+                        <h4 class="text-right">Total a pagar: <strong>50.00â‚¬</strong></h4>
                     </div>
                     <br>
                     <a href="pagar" class="btn btn-primary btn-lg btn-block" role="button">Pagar</a>
