--- a/TREC/src/main/resources/templates/carta.html
+++ b/TREC/src/main/resources/templates/carta.html
@@ -40,7 +40,7 @@
 										<span class="price"><a href="post/{{id}}">{{dishPrice}}</a></span>
 									</div>
 								</div>
-								<p><a href="post/{{id}}">{{ingredients}}</a></p>
+								<p><a href="post/{{id}}">{{ingredient}}</a></p>
 							</div>
 						</div>
 						{{/dishes}}
@@ -51,6 +51,7 @@
 					<div class="menu-wrap">
 						<div class="heading-menu text-center ftco-animate">
 							<h3>Comida</h3>
+
 						</div>
 					</div>
 				</div>
