--- a/TREC/src/main/resources/templates/saved_dish.html
+++ b/TREC/src/main/resources/templates/saved_dish.html
@@ -1,7 +1,11 @@
-<html>
-<body>
+<!DOCTYPE html>
+<meta charset="UTF-8"/>
+
+{{>header}}
+	<!-- END nav -->
+	
 	<p>Post has been saved.</p>
 	<p>You have createdso far.</p>
-	<a href="/">Back</a>
-</body>
-</html>
+	<a href="/carta">Back</a>
+
+{{>footer}}
