--- a/TREC/src/main/resources/templates/show_dish.html
+++ b/TREC/src/main/resources/templates/show_dish.html
@@ -1,5 +1,10 @@
-<html>
-<body>
+<!DOCTYPE html>
+<meta charset="UTF-8"/>
+
+{{>header}}
+	<!-- END nav -->
+	
+	
 	<p>User: {{dish.name}}</p>
 	<p>Title: {{dish.dishPrice}}</p>
 	<p>Text: {{dish.category}}</p>
@@ -9,6 +14,6 @@
 	
 	<br>
 	
-	<a href="/">Back</a>
-</body>
-</html>
+	<a href="/carta">Back</a>
+	
+{{>footer}}
