--- a/TREC/src/main/resources/templates/carro.html
+++ b/TREC/src/main/resources/templates/carro.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<meta charset="UTF-8"/>
+
 {{>header}}
 	<!-- END nav -->
 
@@ -45,7 +48,7 @@
                                 </div>
                                 <div class="col-xs-6 col-md-5">
                                     <div class="col-xs-6 text-right">
-                                        <h4><strong>25.00 <span class="text-muted">x</span></strong></h4>
+                                        <h4><strong>25.00€ <span class="text-muted">x</span></strong></h4>
                                     </div>
                                     <div class="col-xs-4">
                                         <input type="text" class="form-control input-sm" value="1">
@@ -66,7 +69,7 @@
                                 </div>
                                 <div class="col-xs-6 col-md-5">
                                     <div class="col-xs-6 text-right">
-                                        <h4><strong>25.00 <span class="text-muted">x</span></strong></h4>
+                                        <h4><strong>25.00€ <span class="text-muted">x</span></strong></h4>
                                     </div>
                                     <div class="col-xs-4">
                                         <input type="text" class="form-control input-sm" value="1">
