--- a/TREC/src/main/resources/templates/carta.html
+++ b/TREC/src/main/resources/templates/carta.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<meta charset="UTF-8"/>
+
 {{>header}}
 	<!-- END nav -->
 	
@@ -34,13 +37,13 @@
 							<div class="text">
 								<div class="d-flex">
 									<div class="one-half">
-										<h3><a href="post/{{id}}">{{name}}</a></h3>
+										<h3><a href="dish/{{id}}">{{name}}</a></h3>
 									</div>
 									<div class="one-forth">
-										<span class="price"><a href="post/{{id}}">{{dishPrice}}</a></span>
+										<span class="price"><a href="dish/{{id}}">{{dishPrice}}</a></span>
 									</div>
 								</div>
-								<p><a href="post/{{id}}">{{ingredient}}</a></p>
+								<p><a href="dish/{{id}}">{{ingredient}}</a></p>
 							</div>
 						</div>
 						{{/dishes}}
