--- a/TREC/src/main/resources/templates/deleted_dish.html
+++ b/TREC/src/main/resources/templates/deleted_dish.html
@@ -1,6 +1,22 @@
-<html>
-<body>
-	<p>Post has been deleted.</p>
-	<a href="/">Back</a>
-</body>
-</html>
+<!DOCTYPE html>
+<meta charset="UTF-8"/>
+
+{{>header}}
+	<!-- END nav -->
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_5.jpg');" data-stellar-background-ratio="0.5">
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row no-gutters slider-text align-items-end justify-content-center">
+      <div class="col-md-9 ftco-animate text-center mb-5">
+        <h1 class="mb-2 bread">:(</h1>
+        <p class="breadcrumbs"><span class="mr-2"><a href="index.html"></a></span>
+          <span></span>Dish has been deleted.</p></br>
+        <center><div class="col-12 col-md-4 d-flex justify-content-center btn-group" >
+          <a href="javascript:history.back()" class="btn btn-primary btn-sm">Volver atrás</a>
+        </div></center>
+      </div>
+    </div>
+  </div>
+</section>
+	
+{{>footer}}
