--- a/TREC/src/main/resources/templates/footer.html
+++ b/TREC/src/main/resources/templates/footer.html
@@ -1,3 +1,4 @@
+<meta charset="UTF-8"/>
 <footer class="ftco-footer ftco-no-pb ftco-section" style="background-image: url('images/bg_8.jpg');">
 		<div class="container">
 			<div class="row mb-5">
