Dishes conected to the database
We can:
-show dishes that are on the database
-add dishes to the database
-delete dishes from the database
Some pages of the web are still ugly

--- a/TREC/src/main/resources/templates/show_dish.html
+++ b/TREC/src/main/resources/templates/show_dish.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<meta charset="UTF-8"/>
-
-{{>header}}
+<html>
+<body>
 	<!-- END nav -->
 	
 	
@@ -16,4 +15,5 @@
 	
 	<a href="/carta">Back</a>
 	
-{{>footer}}
+</body>
+</html>
