--- a/TREC/src/main/resources/templates/saved_dish.html
+++ b/TREC/src/main/resources/templates/saved_dish.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<meta charset="UTF-8"/>
-
-{{>header}}
+<html>
+<body>
 	<!-- END nav -->
 	
 	<p>Post has been saved.</p>
 	<p>You have createdso far.</p>
 	<a href="/carta">Back</a>
 
-{{>footer}}
+</body>
+</html>
