Security and Images of dishes
- There is distinction betwen types of user (not registered, registered and admin). But we still need a way for users to register.
-All interactions with images of dishes are implemented.

--- a/TREC/src/main/resources/templates/add_food.html
+++ b/TREC/src/main/resources/templates/add_food.html
@@ -39,21 +39,30 @@
 						</div>
 					<!-- edit form column -->
 						<div class="col-md-8 col-sm-6 col-xs-12 personal-info">
-						
-						
-									<form action="/dish/new" method="post">
-										<p>Nombre del plato: </p>
-										<input type='text' name='name'/>
-										<p>Precio:</p>
-										<input step="any" type="number" name='dishPrice'/>
-										<p>Tipo:</p>
-										<input type='text' name='category'/>
-										<p>Ingredientes:</p>
-										<textarea name='ingredient' rows=5 cols=40></textarea>
+	<form action="/newdish" method="post" enctype="multipart/form-data">
+ 
+					<p>Nombre del plato: </p>
+		<input type='text' name='name'/>
+		<p>Precio:</p>
+		<input step="any" type="number" name='dishPrice'/>
+		<p>Tipo:</p>
+		<input type='text' name='category'/>
+		<p>Ingredientes:</p>
+		<textarea name='ingredient' rows=5 cols=40></textarea>
+ 
 
-										<input type='submit' value='Save'/>
-										</form>
-										
+
+  <p>Image: </p>
+  <input type='file' name='imageField' accept=".jpg, .jpeg" />
+
+  <input type="hidden" name="_csrf" value="{{token}}"/>
+  <p>
+    <button onclick="location.href='/'; return false;">Cancel</button>
+    <input type="submit" value="Save"/>
+  </p>
+  </form>
+						
+									
 										
 							<form class="form-horizontal" role="form" action="add-dish">
 								<div class="form-group">
