--- a/TREC/src/main/resources/templates/header.html
+++ b/TREC/src/main/resources/templates/header.html
@@ -32,7 +32,7 @@
 				<div class="col-12 col-md d-flex align-items-center">
 				</div>
 				<div class="col-12 col-md-4 d-flex justify-content-md-end btn-group">
-					<a href="registro" class="btn btn-primary btn-sm">Regístrate o inicia sesión</a>
+					<a href="/login" class="btn btn-primary btn-sm">Regístrate o inicia sesión</a>
 				</div>
 				<div class="col-12 col-md-1 d-flex justify-content-md-end btn-group">
 					<a href="carro" class="btn btn-primary btn-sm"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
@@ -53,11 +53,11 @@
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a href="index" class="nav-link">Principal</a></li>
-					<li class="nav-item"><a href="equipo" class="nav-link">Equipo</a></li>
-					<li class="nav-item"><a href="carta" class="nav-link">Carta</a></li>
-					<li class="nav-item"><a href="contacto" class="nav-link">Contacto</a></li>
-                    <li class="nav-item"><a href="perfil" class="nav-link" content="text-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+					<li class="nav-item"><a href="/index" class="nav-link">Principal</a></li>
+					<li class="nav-item"><a href="/equipo" class="nav-link">Equipo</a></li>
+					<li class="nav-item"><a href="/carta" class="nav-link">Carta</a></li>
+					<li class="nav-item"><a href="/contacto" class="nav-link">Contacto</a></li>
+                    <li class="nav-item"><a href="/perfil" class="nav-link" content="text-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
 						<path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
 						<path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
 					  </svg></a></li>
