Error page updated
Updated the style of the error page that will be used in all errors.

--- a/TREC/src/main/resources/templates/404.html
+++ b/TREC/src/main/resources/templates/404.html
@@ -9,15 +9,25 @@
   <div class="container">
     <div class="row no-gutters slider-text align-items-end justify-content-center">
       <div class="col-md-9 ftco-animate text-center mb-5">
-        <h1 class="mb-2 bread">ERROR 404</h1>
-        <p class="breadcrumbs"><span class="mr-2"><a href="index.html"></a></span>
-          <span></span>La página que buscas no existe o ya no está disponible.</p></br>
-        <center><div class="col-12 col-md-4 d-flex justify-content-center btn-group" >
-          <a href="javascript:history.back()" class="btn btn-primary btn-sm">Volver atrás</a>
-        </div></center>
+        <h1 class="mb-2 bread">Vaya... Parece que algo falla</h1>
       </div>
     </div>
   </div>
 </section>
 
+<section class="ftco-section contact-section bg-light">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-5">
+              <img src="images/error.png">
+          </div>
+          <div class="col-lg-7">
+              <center><h2>Parece que algo no va bien, ha ocurrido un error</h2>
+              <p>Pero no te preocupes, puedes volver a la página principal aquí:</p>
+              <p><a href="index" class="btn btn-primary">PÁGINA PRINCIPAL</a></p>
+              </div></center>
+          </div> 
+      </div>
+  </div>
+</section>
 {{>footer}}
