Changes in URLs, templates' front-end and controllers.
- Login front-end fixed.
- Profile front-end fixed.
- Add food front-end fixed.
- Dishes pre-fixed.
- All URLs in English.
- Header personalized according to user's role.

--- a/TREC/src/main/resources/templates/404.html
+++ b/TREC/src/main/resources/templates/404.html
@@ -24,7 +24,7 @@
           <div class="col-lg-7">
               <center><h2>Parece que algo no va bien, ha ocurrido un error</h2>
               <p>Pero no te preocupes, puedes volver a la página principal aquí:</p>
-              <p><a href="index" class="btn btn-primary">PÁGINA PRINCIPAL</a></p>
+              <p><a href="/index" class="btn btn-primary">PÁGINA PRINCIPAL</a></p>
               </div></center>
           </div> 
       </div>
