--- a/TREC/src/main/resources/templates/cart.html
+++ b/TREC/src/main/resources/templates/cart.html
@@ -10,7 +10,7 @@
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
 				<div class="col-md-9 ftco-animate text-center mb-5">
 					<h1 class="mb-2 bread">Registro de pedidos</h1>
-					<p class="breadcrumbs"><span class="mr-2"><a href="index">Principal <i class="fa fa-chevron-right"></i></a></span> <span>Carro <i class="fa fa-chevron-right"></i></span></p>
+					<p class="breadcrumbs"><span class="mr-2"><a href="/index">Principal <i class="fa fa-chevron-right"></i></a></span> <span>Carro <i class="fa fa-chevron-right"></i></span></p>
                     <p>Hey! Echa un vistazo a los pedidos que has realizado hasta el momento.</p>
 					<p>Si tu pedido ya está listo, ¡finaliza aquí tu compra!</p>
 				</div>
@@ -88,7 +88,7 @@
                                     <h4 class="text-right">Total <strong>50.00€</strong></h4>
                                 </div>
                                 <div class="col-xs-3 col-md-4">
-                                    <a href="pagar">
+                                    <a href="/pay">
                                     <button type="button" class="btn btn-primary btn-block btn-lg">
                                         Pagar
                                     </button>
