--- a/TREC/src/main/resources/templates/editdish.html
+++ b/TREC/src/main/resources/templates/editdish.html
@@ -29,7 +29,7 @@
   <br>
   <br>
   <p>
-    <button onclick="location.href='/dishes/{{dish.id}}'; return false;">Cancel</button>
+    <button onclick="location.href='/dishes-{{dish.id}}'; return false;">Cancel</button>
     <input type="submit" value="Save" />
   </p>
 </form>
