--- a/TREC/src/main/resources/templates/index.html
+++ b/TREC/src/main/resources/templates/index.html
@@ -68,7 +68,7 @@
 						</p>
 						<p>No se detendrán ante nada.
 						</p>
-						<p><a href="equipo" class="btn btn-primary">Conocenos</a></p>
+						<p><a href="/team" class="btn btn-primary">Conocenos</a></p>
 					</div>
 				</div>
 			</div>
@@ -80,7 +80,7 @@
 			<div class="row py-2">
 				<div class="col-md-12 text-center">
 					<h2>Te Hacemos Comida Sana &amp; Deliciosa</h2>
-					<a href="carta" class="btn btn-white btn-outline-white">Pide ya</a>
+					<a href="/menu" class="btn btn-white btn-outline-white">Pide ya</a>
 				</div>
 			</div>
 		</div>
