--- a/TREC/src/main/resources/templates/team.html
+++ b/TREC/src/main/resources/templates/team.html
@@ -10,7 +10,7 @@
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
 				<div class="col-md-9 ftco-animate text-center mb-5">
 					<h1 class="mb-2 bread">Equipo</h1>
-					<p class="breadcrumbs"><span class="mr-2"><a href="index">Principal <i class="fa fa-chevron-right"></i></a></span> <span>Equipo <i class="fa fa-chevron-right"></i></span></p>
+					<p class="breadcrumbs"><span class="mr-2"><a href="/index">Principal <i class="fa fa-chevron-right"></i></a></span> <span>Equipo <i class="fa fa-chevron-right"></i></span></p>
 				</div>
 			</div>
 		</div>
