--- a/TREC/src/main/resources/templates/pay.html
+++ b/TREC/src/main/resources/templates/pay.html
@@ -10,7 +10,7 @@
 			<div class="row no-gutters slider-text align-items-end justify-content-center">
 				<div class="col-md-9 ftco-animate text-center mb-5">
 					<h1 class="mb-2 bread">Paga tu Pedido</h1>
-					<p class="breadcrumbs"><span class="mr-2"><a href="index">Principal<span class="mr-2"><i class="fa fa-chevron-right"></i><a href="carro">Carro <i class="fa fa-chevron-right"></i></a></span> <span>Pagar <i class="fa fa-chevron-right"></i></span></p>
+					<p class="breadcrumbs"><span class="mr-2"><a href="/index">Principal<span class="mr-2"><i class="fa fa-chevron-right"></i><a href="/cart">Carro <i class="fa fa-chevron-right"></i></a></span> <span>Pagar <i class="fa fa-chevron-right"></i></span></p>
 				</div>
 			</div>
 		</div>
@@ -131,7 +131,7 @@
                         <h4 class="text-right">Total a pagar: <strong>50.00</strong></h4>
                     </div>
                     <br>
-                    <a href="pagar" class="btn btn-primary btn-lg btn-block" role="button">Pagar</a>
+                    <a href="/pay" class="btn btn-primary btn-lg btn-block" role="button">Pagar</a>
                 </div>
             </div>
         </div>
