--- a/TREC/src/main/resources/templates/profile.html
+++ b/TREC/src/main/resources/templates/profile.html
@@ -127,7 +127,7 @@
 													<h3 class="white">Pollo asado</h3>
 												</div>
 												<div class="one-forth">
-													<div><a href="carro.html" class="btn btn-primary btn-sm">PEDIR</a></div>
+													<div><a href="/cart" class="btn btn-primary btn-sm">PEDIR</a></div>
 													<span class="price">25€</span>
 												</div>
 											</div>
